--- a/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/package.json
+++ b/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/package.json
@@ -22,6 +22,9 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "@grapecity-software/spread-sheets-vue": "^18.0.5",
+    "@grapecity/spread-sheets": "^18.0.5",
+    "@grapecity/spread-sheets-resources-zh": "^18.0.5",
     "axios": "^1.3.5",
     "compressing": "^1.5.1",
     "echarts": "^5.4.2",
