--- a/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/package.json
+++ b/vue3/vue3项目+TypeScript前端项目一套通关/vue3_admin_template/vue3_admin_template/package.json
@@ -27,6 +27,7 @@
     "@grapecity/spread-sheets-resources-zh": "^18.0.5",
     "axios": "^1.3.5",
     "compressing": "^1.5.1",
+    "decimal.js": "^10.5.0",
     "echarts": "^5.4.2",
     "echarts-liquidfill": "^3.1.0",
     "element-plus": "^2.3.3",
